@@ -3,7 +3,7 @@
  *
  * $Id$
  *
- * Copyright (C) 2006 Julien BLACHE <jb@jblache.org>
+ * Copyright (C) 2006-2007 Julien BLACHE <jb@jblache.org>
  * Copyright (C) 2006 Yves-Alexis Perez <corsac@corsac.net>
  *
  * This program is free software; you can redistribute it and/or modify
@@ -72,7 +72,7 @@ kbd_backlight_get(void)
 }
 
 static void
-kbd_backlight_set(int val)
+kbd_backlight_set(int val, int who)
 {
   int fd, curval, ret;
   unsigned char buf[8];
@@ -143,7 +143,7 @@ kbd_backlight_set(int val)
 
   close(fd);
 
-  mbpdbus_send_kbd_backlight(val, kbd_bck_info.level);
+  mbpdbus_send_kbd_backlight(val, kbd_bck_info.level, who);
 
   kbd_bck_info.level = val;
 }
@@ -151,7 +151,7 @@ kbd_backlight_set(int val)
 void
 kbd_backlight_off(void)
 {
-  kbd_backlight_set(KBD_BACKLIGHT_OFF);
+  kbd_backlight_set(KBD_BACKLIGHT_OFF, KBD_USER);
 }
 
 void
@@ -189,7 +189,7 @@ kbd_backlight_step(int dir)
   else
     return;
 
-  kbd_backlight_set(newval);
+  kbd_backlight_set(newval, KBD_USER);
 }
 
 void
@@ -258,7 +258,7 @@ kbd_backlight_ambient_check(void)
       kbd_bck_info.auto_on = 1;
       kbd_bck_info.off = 0;
 
-      kbd_backlight_set(kbd_cfg.auto_lvl);
+      kbd_backlight_set(kbd_cfg.auto_lvl, KBD_AUTO);
     }
   else if (kbd_bck_info.auto_on)
     {
@@ -269,7 +269,7 @@ kbd_backlight_ambient_check(void)
 	  kbd_bck_info.auto_on = 0;
 	  kbd_bck_info.off = 0;
 
-	  kbd_backlight_set(KBD_BACKLIGHT_OFF);
+	  kbd_backlight_set(KBD_BACKLIGHT_OFF, KBD_AUTO);
 	}
     }
 
